--- a/profilePage.html
+++ b/profilePage.html
@@ -72,7 +72,7 @@
                     <p><i>Feel free to reach out if you're looking for a reliable and versatile developer to bring your
                             web projects to life.</i></p>
                     <div class="about-button">
-                        <a href="images\Rushi Latkar Resume - IT.pdf" download>Download CV <i
+                        <a href="Rushi Latkar Resume - IT.pdf" download>Download CV <i
                                 class="fa-solid fa-download"></i></a>
                     </div>
                 </div>
@@ -217,7 +217,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/processModeling.png" alt="">
+                        <img src="processModeling.png" alt="">
                         <div class="text">Process Modeling</div>
                         <p>90%</p>
                         <div class="progressbar">
@@ -228,7 +228,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/dataManagement.png" alt="">
+                        <img src="dataManagement.png" alt="">
                         <div class="text">Database Management</div>
                         <p>80%</p>
                         <div class="progressbar">
@@ -239,7 +239,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/appian.png" alt="">
+                        <img src="appian.png" alt="">
                         <div class="text">Appian</div>
                         <p>95%</p>
                         <div class="progressbar">
@@ -250,7 +250,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/html5.png" alt="">
+                        <img src="html5.png" alt="">
                         <div class="text">HTML</div>
                         <p>90%</p>
                         <div class="progressbar">
@@ -261,7 +261,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/css3.png" alt="">
+                        <img src="css3.png" alt="">
                         <div class="text">CSS</div>
                         <p>70%</p>
                         <div class="progressbar">
@@ -272,7 +272,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/uiux.png" alt="">
+                        <img src="uiux.png" alt="">
                         <div class="text">UI/UX Design</div>
                         <p>75%</p>
                         <div class="progressbar">
@@ -283,7 +283,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/appian.png" alt="">
+                        <img src="appian.png" alt="">
                         <div class="text">Appian Administration</div>
                         <p>70%</p>
                         <div class="progressbar">
@@ -294,7 +294,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/deployment.png" alt="">
+                        <img src="deployment.png" alt="">
                         <div class="text">Deployment</div>
                         <p>95%</p>
                         <div class="progressbar">
@@ -305,7 +305,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/DBMS.png" alt="">
+                        <img src="DBMS.png" alt="">
                         <div class="text">DBMS</div>
                         <p>80%</p>
                         <div class="progressbar">
@@ -316,7 +316,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/dataModeling.png" alt="">
+                        <img src="dataModeling.png" alt="">
                         <div class="text">Data Modeling</div>
                         <p>80%</p>
                         <div class="progressbar">
