--- a/profilePage.html
+++ b/profilePage.html
@@ -206,7 +206,7 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/sql.png" alt="">
+                        <img src="sql.png" alt="">
                         <div class="text">SQL</div>
                         <p>85%</p>
                         <div class="progressbar">
