--- a/profilePage.html
+++ b/profilePage.html
@@ -72,7 +72,7 @@
                     <p><i>Feel free to reach out if you're looking for a reliable and versatile developer to bring your
                             web projects to life.</i></p>
                     <div class="about-button">
-                        <a href="Rushi Latkar Resume - IT.pdf" download>Download CV <i
+                        <a href="Rushikesh Resume" download>Download CV <i
                                 class="fa-solid fa-download"></i></a>
                     </div>
                 </div>
