--- a/profilePage.html
+++ b/profilePage.html
@@ -178,10 +178,10 @@
                     </div>
                     <div class="tab-contents active-tab" id="experience">
                         <ul>
-                            <li><span>System Engineer</span><br>Infosys India Pvt.
-                                Ltd.<br>Hyderabad
-                                 Telagana, India.</li>
-                            <li><span>Appian Developer</span><br>BPM Tool<br>Appian Application Developer</li>
+                            <li><span>Senior System Engineer</span><br>Infosys India Pvt.
+                                Ltd.<br>Pune
+                                 Maharashtra, India.</li>
+                            <li><span>Senior Appian Developer</span><br>BPM Tool<br>Appian Application Developer</li>
                             <li><span></span><br></li>
                         </ul>
                     </div>
