--- a/profilePage.html
+++ b/profilePage.html
@@ -160,7 +160,7 @@
                             </div>
                             <div class="flip-card-back">
                                 <ul style="list-style-type: disc;">
-                                    <li>Appian Associate Developer.</li>
+                                    <li>Appian Senior Developer (L2).</li>
                                     <p class="insitute">Appian Corporation</p><br>
                                     <li> Infosys Certified Appian Analyst.</li>
                                     <p class="insitute">Infosys Pvt. Ltd.</p><br>
